# taskchampion

./: Cargo.toml  Package.swift  README.md
.github/workflows/: release-xcframework.yml  update-swift-bindings.yml
Sources/TaskChampionFFI/: TaskChampionFFI.swift  TaskChampionFFIFFI.h  TaskChampionFFIFFI.modulemap
ffi/: Cargo.toml
ffi/src/: convert.rs  lib.rs  queries.rs  recurrence.rs  replica_ops.rs  task_ops.rs  tree.rs  types.rs
ffi/tests/: praxis_round_trip.rs  round_trip.rs
praxis/: Cargo.toml
praxis/src/: errors.rs  lib.rs
praxis/src/recurrence/: generate.rs  mask.rs  mod.rs  spec.rs
praxis/src/tree/: behavior.rs  mod.rs
scripts/: build_xcframework.sh
src/: errors.rs  lib.rs  replica.rs
src/storage/: columns.rs  external.rs  inmemory.rs  mod.rs  sql_ops.rs  test.rs
src/storage/powersync/: inner.rs  mod.rs  row_reader.rs
src/storage/send_wrapper/: actor.rs  test.rs  traits.rs  wrapper.rs
src/taskdb/: apply.rs  mod.rs
