[package]
name = "taskchampion-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "taskchampion_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
taskchampion = { path = "..", features = ["storage-external"] }
uniffi = { version = "0.31", features = ["cli"] }
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
taskchampion = { path = "..", features = ["storage-external"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "macros"] }
