[package]
name = "praxis"
version = "0.1.0"
edition = "2021"
description = "Recurrence engine and tree behavior rules for TaskWarrior"
publish = false

[dependencies]
taskchampion = { path = "..", default-features = false }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
